@@ -236,6 +236,7 @@ AC_OUTPUT( Makefile \
            src/post/Makefile \
            src/demo/Makefile \
            src/demo/bench/Makefile \
+           src/demo/fem/Makefile \
            src/demo/la/Makefile \
            src/demo/solvers/Makefile \
            src/demo/solvers/navierstokes/Makefile \
